@@ -1,5 +1,5 @@
 === Opus Primus readme.txt ===
-* Last revised March 25, 2013
+* Last revised July 11, 2013
 
 == Contents ==
 * Copyright
@@ -44,10 +44,6 @@ may be, individually noted below.
 * Normalize.css is a project by Nicolas Gallagher and Jonathan Neal. A minimized
 version is used. Licensed as Public Domain
 - for more information see http://necolas.github.com/normalize.css/
-
-* less-1.3.3.js is a project by Alexis Sellier. A minimized version is used.
-Licensed under Apache v2.0
-- for more information see https://github.com/cloudhead/less.js
 
 * Font: Merienda One
 Copyright (c) 2011, Eduardo Tunni (http://www.tipo.net.ar), with Reserved Font Name "Merienda"
@@ -130,6 +126,11 @@ The following will show how, if active, they affect the layout:
 - Full Page (one-column): no active sidebar widget areas
 - Two-Column: widget areas active in only one sidebar area
 - Three-Column: at least one widget area active in each sidebar area
+
+Q: What happened to the LESS components of the theme?
+The LESS components of the theme were effectively removed at version 1.2 as a
+means to improve load time. The styles that were generated by the LESS script
+and related file were compiled and merged into the main theme stylesheet.
 
 == Notes ==
 1. $content_width is set based on how many columns being used and the common
